# gazelle

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  DOCS.md  Directory.Build.props  Directory.Packages.props  Gazelle.sln  IDEAS.md  README.md  TASKS.md  dotnet-tools.json  go.mod  truss_example.json
.agents/: DESIGN_SYSTEM.md  README.md
.agents/schemas/: model-schema.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  COPILOT_INSTRUCTIONS.md  FUNDING.yml  SECURITY.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/pages/: index.html  script.js  styles.css
.github/workflows/: ci.yml  deploy-pages.yml  publish-cli.yml  publish-to-nuget.yml  publish.yml
.hunspell/: custom.dic
agents/: AI_INSTRUCTIONS.md  DESIGN_SYSTEM.md  README.md
ai-agents/: AI_INTEGRATION.md
cli/: Gazelle.CLI.fsproj  Program.fs  README.md
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CLI.md  DOCS.md  FAQ.md  IDEAS.md  README.md  TASKS.md  TECHNICAL.md  WORKFLOWS.md  docs.html  index.html  macos-code-signing.md  script.js  styles.css
docs/releases/: README.md  checksums.txt
internal/cmd/: analyze.go  create.go  info.go  root.go  validate.go
io/: DOCS.md  Gazelle.IO.fsproj
io/ETABS/: ETABS.fs  Renderer.fs  Types.fs
io/Shared/: ErrorHandling.fs  IO.fs  Messages.fs  Model.fs  UnvalidatedTypes.fs  Unwrap.fs  ValidatedTypes.fs
pkg/: main.go
pkg/analysis/: simple.go
pkg/core/: model.go
scripts/: build-releases.sh  coverage.sh  loc.sh  spellcheck.sh  update-version.sh
src/: Gazelle.fsproj  README.md  analysis.rs  concrete.rs  constraints.rs  core.rs  daemon.rs  elements.rs  error.rs  io.rs  lib.rs  loads.rs  main.rs  materials.rs  matrix.rs  prelude.rs  solvers.rs  units.rs
src/io/: DOCS.md  ETABS.fs  IO.fs  Types.fs
tests/: Gazelle.Tests.fsproj  integration_tests.rs  matrix_debug.rs  system_validation.rs
web/: index.html  script.js
(+4 files in other folders)
