[package]
name = "gazelle"
version = "0.0.1"
edition = "2021"
authors = ["James S. Bayley <jsbayley@users.noreply.github.com>"]
description = "🦌 The Linux for Structural Engineers - Fast, safe, extensible structural analysis engine with type-safe units and daemon architecture"
license = "AGPL-3.0"
repository = "https://github.com/jsbayley/gazelle"
documentation = "https://docs.rs/gazelle"
readme = "README.md"
homepage = "https://github.com/jsbayley/gazelle"
keywords = ["structural", "analysis", "engineering", "finite-element", "daemon"]
categories = ["science", "mathematics", "simulation", "web-programming::http-server"]

[lib]
name = "gazelle"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gazelle"
path = "src/main.rs"

[dependencies]
# Linear algebra and mathematics
nalgebra = { version = "0.32", features = ["serde-serialize"] }
faer = "0.18"
num-traits = "0.2"
num-complex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Parallel processing
rayon = "1.8"

# Random number generation
rand = "0.8"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Python bindings
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

# Logging
log = "0.4"
env_logger = "0.10"

# Performance utilities
criterion = { version = "0.5", optional = true }

# Async runtime and HTTP server (for daemon)
tokio = { version = "1.0", features = ["full"], optional = true }
warp = { version = "0.3", optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
approx = "0.5"

[features]
default = []
python = ["pyo3"]
benchmarks = ["criterion"]
daemon = ["tokio", "warp", "uuid", "chrono"]


